--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-SOON - قريباً - BIENTÔT
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Drwpy" />
+    <meta property="og:description" content="Drop your Merch" />
+    <meta property="og:image" content="" />
+    <title>DRWPY</title>
+    <style>
+      .center {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
+  <body>
+
+    <h1 class="center"> SOON - قريباً - BIENTÔT </h1>
+
+  </body>
+</html>
