--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        font-family: Sans;
       }
     </style>
   </head>
