--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: Sans;
+        font-family: Sans-serif;
       }
     </style>
   </head>
