--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <h1 class="center"> SOON - قريباً - BIENTÔT </h1>
+    <h1 class="center"> SOON — قريباً — BIENTÔT </h1>
 
   </body>
 </html>
