--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         align-items: center;
         font-family: Sans-serif;
       }
+      .rainbow {
+        background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     </style>
   </head>
   <body>
 
-    <h1 class="center"> SOON — قريباً — BIENTÔT </h1>
+    <h1 class="center rainbow"> SOON — قريباً — BIENTÔT </h1>
 
   </body>
 </html>
