--- a/index.html
+++ b/index.html
@@ -16,15 +16,35 @@
         font-family: Sans-serif;
       }
       .rainbow {
-        background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+          text-align: center;
+          text-decoration: underline;
+          font-size: 32px;
+          font-family: monospace;
+          letter-spacing: 5px;
+      }
+      .rainbow_text_animated {
+          background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
+          animation: rainbow_animation 6s ease-in-out infinite;
+          background-size: 400% 100%;
+      }
+      
+      @keyframes rainbow_animation {
+          0%,100% {
+              background-position: 0 0;
+          }
+      
+          50% {
+              background-position: 100% 0;
+          }
       }
     </style>
   </head>
   <body>
 
-    <h1 class="center rainbow"> SOON — قريباً — BIENTÔT </h1>
+    <h1 class="center rainbow rainbow_text_animated"> SOON — قريباً — BIENTÔT </h1>
 
   </body>
 </html>
