--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
         align-items: center;
         font-family: Sans-serif;
       }
-      .rainbow {
-          text-align: center;
-          text-decoration: underline;
-          font-size: 32px;
-          font-family: monospace;
-          letter-spacing: 5px;
-      }
       .rainbow_text_animated {
           background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
           -webkit-background-clip: text;
@@ -44,7 +37,7 @@
   </head>
   <body>
 
-    <h1 class="center rainbow rainbow_text_animated"> SOON — قريباً — BIENTÔT </h1>
+    <h1 class="center rainbow_text_animated"> SOON — قريباً — BIENTÔT </h1>
 
   </body>
 </html>
