--- a/index.html
+++ b/index.html
@@ -511,28 +511,13 @@
 		  padding: 200px 0;
 		  text-align: center;
 		}
-		
-		.environment {
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  right: 0;
-		  bottom: 0;
-		  opacity: 0.5;
-		  filter: blur(5px);
-		  background: url(https://images.unsplash.com/photo-1602136773736-34d445b989cb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80)
-		    center no-repeat;
-		  background-size: cover;
-		}
-
 	</style>
   </head>
 	<body>
-		<section>
+		<section class="center">
   			<div class="hero-container">
-    			<div class="environment"></div>
-			    	<h2 class="hero glitch layers" data-text=" SOON — قريباً — BIENTÔT "><span> SOON — قريباً — BIENTÔT </span></h2>
-			  	</div>
+				<h2 class="hero glitch layers" data-text=" SOON — قريباً — BIENTÔT "><span> SOON — قريباً — BIENTÔT </span></h2>
+			</div>
 		</section>
   	</body>
 </html>
