--- a/index.html
+++ b/index.html
@@ -516,7 +516,9 @@
 	<body>
 		<section class="center">
   			<div class="hero-container">
-				<h2 class="hero glitch layers" data-text=" SOON — قريباً — BIENTÔT "><span> SOON — قريباً — BIENTÔT </span></h2>
+				<h2 class="hero glitch layers" data-text=" SOONT "><span> SOON </span></h2>
+				<h2 class="hero glitch layers" data-text=" قريباً "><span> قريباً </span></h2>
+				<h2 class="hero glitch layers" data-text=" BIENTÔT "><span> BIENTÔT </span></h2>
 			</div>
 		</section>
   	</body>
