--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 	<body>
 		<section class="center">
   			<div class="hero-container">
-				<h2 class="hero glitch layers" data-text=" SOONT "><span> SOON </span></h2>
+				<h2 class="hero glitch layers" data-text=" SOON "><span> SOON </span></h2>
 				<h2 class="hero glitch layers" data-text=" قريباً "><span> قريباً </span></h2>
 				<h2 class="hero glitch layers" data-text=" BIENTÔT "><span> BIENTÔT </span></h2>
 			</div>
